replays/errorlog-20181202-204449-0700-1543808689-32-32-0.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    for x in range(-1 * size, size + 1):
                                       ^
IndentationError: unindent does not match any outer indentation level

